[metadata]
name = poutils
url = https://github.com/afpy/poutils
version = 0.12.0
description = Gettext related tools: spellcheck, line wrapping etc...
long_description = file: README.rst
keywords = poutils, gettext, powrap, pospell, pogrep, potodo, pomerge, padpo
license = MIT
author = Jules Lasne
author_email = jules.lasne@gmail.com
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = True
include_package_data = True
install_requires =
    powrap==0.4.0
    pospell==1.0.11
    pogrep==0.1.2
    potodo==0.19.1
    pomerge==0.1.4
    padpo==0.10.0
