[metadata]
name = poutils
url = https://github.com/afpy/poutils
version = 0.14.0
description = Gettext related tools: spellcheck, line wrapping etc...
long_description = file: README.rst
keywords = poutils, gettext, powrap, pospell, pogrep, potodo, pomerge, padpo
license = MIT
author = Jules Lasne
author_email = jules.lasne@gmail.com
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
zip_safe = True
include_package_data = True
install_requires =
    powrap==1.0.0
    pospell==1.0.13
    pogrep==0.1.2
    potodo==0.20.0
    pomerge==0.1.4
    padpo==0.11.0
