[metadata]
name = poutils
url = https://github.com/afpy/poutils
version = 0.15.1
description = Gettext related tools: spellcheck, line wrapping etc...
long_description = file: README.rst
keywords = poutils, gettext, powrap, pospell, pogrep, potodo, pomerge, padpo
license = MIT
author = Jules Lasne
author_email = jules.lasne@gmail.com
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
zip_safe = True
include_package_data = True
install_requires =
    powrap==1.0.1
    pospell==1.1
    pogrep==0.1.4
    potodo==0.21.3
    pomerge==0.1.4
    padpo==0.11.0
    sphinx-lint==0.6.7
